Fixed spacing between items

--- a/protohome/css/dashboard.css
+++ b/protohome/css/dashboard.css
@@ -89,7 +89,7 @@ body {
 h1{
     position: relative;
     color:#ffffff;
-    margin-top: 5%;
+    margin-top: 3%;
     left: 5%;
     width: 100%;
     
